deploy/gitops/apps/stream-analytics-client/client/overlays/local/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stream-analytics-client
  namespace: stream-analytics-client
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
    nginx.ingress.kubernetes.io/proxy-read-timeout: "3600"
    nginx.ingress.kubernetes.io/proxy-send-timeout: "3600"
spec:
  ingressClassName: nginx
  rules:
    - host: stream-analytics.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: stream-analytics-client
                port:
                  name: http
